# codex_gw

./: .gitignore  README.md  codex_gateway.py  gpt_action_schema.template.json  gpt_action_schema_template_data.py  gpt_system_instruction.template.txt  gpt_system_instruction_template_data.py  pyproject.toml
cgw/: __init__.py  approval.py  auth.py  config.py  jobs.py  models.py  protocol_registry.py  state_db.py  text_utils.py
protocol/: codex_app_server_protocol.v2.schemas.json
tests/: test_admin_api.py  test_approval.py  test_auth.py  test_config.py  test_event_queue.py  test_jobs.py  test_protocol_registry.py  test_schema_fallback.py  test_state_db.py  test_text_utils.py
