[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-gateway"
version = "0.2.0"
description = "FastAPI gateway for Codex automation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "pydantic",
  "uvicorn",
  "websockets",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
codex-gateway = "codex_gateway:main"

[tool.setuptools]
py-modules = [
  "codex_gateway",
  "gpt_action_schema_template_data",
  "gpt_system_instruction_template_data",
]

[tool.setuptools.packages.find]
include = ["cgw*"]
